--- a/src/Core/Gathering.Application/Gathering.Application.csproj
+++ b/src/Core/Gathering.Application/Gathering.Application.csproj
@@ -9,4 +9,8 @@
     <ItemGroup>
         <PackageReference Include="MediatR" Version="11.1.0" />
     </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="../Gathering.Domain/Gathering.Domain.csproj" />
+    </ItemGroup>
 </Project>
