--- a/src/Core/GatheringEvents.Domain/GatheringEvents.Domain.csproj
+++ b/src/Core/GatheringEvents.Domain/GatheringEvents.Domain.csproj
@@ -6,4 +6,7 @@
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="MediatR" Version="11.1.0" />
+    </ItemGroup>
 </Project>
